Stable Release beta, proper SQLite implementation.